i-MSCP ChangeLog
~~~~~~~~~~~~~~~~
-------------------------------------------------------------------------------------
i-MSCP 1.0.2.2 (RC3)
-------------------------------------------------------------------------------------

Distributions:
	Ubuntu:
		- Added support for Oneiric Ocelot

Tickets:
	- Fixed #296: Defect - Some issues with dovecot migration script
	- Fixed #366: Enhancement - Move menu label show/disable option at user profile level
	- Fixed #370: Enhancement - Admin/Reseller must be able to edit "Open_Base_Dir" for a domain
	- Fixed #372: Cosmetic - Change colour of enable/disabled Features in PHP Editor
	- Fixed #375: Defect - GUI should allow shared mount points
	- Fixed #377: Defect - Some issues with shared mount point
	- Fixed #380: Bug - Order Panel - An exception have been thrown Hosting
	- Fixed #381: Defect - Wrong query in setup_imscp_database - Drop user - Condition
	- Fixed #382: Defect - Notifications system for authentication is broken
	- Fixed #384: Defect - Deleting FTP-Account: An exception have been thrown
	- Fixed #385: Enhancement - Unable to install correctry - Installer: fqdn & hostname errors

-------------------------------------------------------------------------------------
i-MSCP 1.0.2.1 (RC2)
-------------------------------------------------------------------------------------
2012-02-28: Torsten Widmann
	- RELEASE i-MSCP 1.0.2.1 (RC2)

Features / Enhancements:

	GUI:
		Core:
			- Added plugins management interface
			- Added action script (rest.php) to handle REST requests (The REST server will comming soon)
			- Updated action scripts and core library to fit with events system changes
		Components:
			- Authentication
				- Added authentication base class to handle authentication process
				- Added bruteforce class for bruteforce detection
			- Events system:
				- Added new events (See iMSCP_Events class)
				- Added support for listeners return values
				- Finished implementation of iMSCP_Events_Manager_interface