@@ -288,7 +288,7 @@ class iMSCP_Plugin_Manager
 	public function isProtected($pluginName)
 	{
 		if (!$this->_isLoadedProtectedPluginsList) {
-			$file = CACHE_PATH . '/protected_plugins.php';
+			$file = PERSISTENT_PATH . '/protected_plugins.php';
 			$protectedPlugins = array();
 
 			if (is_readable($file)) {
@@ -327,7 +327,7 @@ class iMSCP_Plugin_Manager
 	 */
 	public function  _protect()
 	{
-		$file = CACHE_PATH . '/protected_plugins.php';
+		$file = PERSISTENT_PATH . '/protected_plugins.php';
 		$lastUpdate = 'Last update: ' . date('Y/m/d', time()) . " by {$_SESSION['user_logged']}";
 		$content = "<?php\n/**\n * Protected plugin list\n * Auto-generated by i-MSCP plugin manager\n";
 		$content .= " * $lastUpdate\n */\n\n";
